# avalon

./: CMakeLists.txt  README.md  README_developer.md  avalon_electron.json  vis.mac
examples/: avalon_mlc.json  avalon_test.json  custom_material_phantom.jsonc  minimal_rds.jsonc  nohead_control_points.jsonc  simple_nohead.jsonc  slab_phantom.jsonc  sweeping_gap.jsonc  truebeam.jsonc  two_static_fields_with_cp.jsonc
gdml/: 06-14.gdml  07-14.gdml  BasePlate.gdml  BasePlate_01.gdml  BasePlate_01_materials.xml  BasePlate_02.gdml  BasePlate_02_materials.xml  CornerClipper.gdml  FrictionRing2.gdml  FrictionRing2_materials.xml  GDML_YShield-MedDiscr.gdml  GDML_YShield-MedDiscr_materials.xml  LHI.gdml  LHO1.gdml  LHO60.gdml  LHT.gdml  LQI.gdml  LQT.gdml  LowerJawNewCSO.gdml  LowerJawNewCSO_materials.xml  MLC_corner.gdml  MLC_corner_materials.xml  ScatterFilter.gdml  ScatterFilter_materials.xml  SimplShColl_materials.xml  SimpleBasePlate.gdml  SimpleBasePlate_materials.xml  SimpleShColl.gdml  UpperJawNewCSO.gdml  UpperJawNewCSO_materials.xml
old/include/: TB02_BaseDetectorConstruction.hh  TB02_CellFlux.hh  TB02_CellFlux3D.hh  TB02_HalcyonDetectorConstruction.hh  TB02_TrueBeamDetectorConstruction.hh
old/src/: TB02_BaseDetectorConstruction.cc  TB02_CellFlux.cc  TB02_CellFlux3D.cc  TB02_HalcyonDetectorConstruction.cc  TB02_TrueBeamDetectorConstruction.cc
scripts/: run_pr_tests.ps1  truebeam_dicom_to_vl.py
src/: avalon.cpp  avalon_electron.cpp  halcyon.cpp  linac.cpp  linac.h  linac_cli.cpp  linac_tool.cpp  logger.cpp  logger.h  machine_information.cpp  machine_information.h  math_utils.cpp  math_utils.h  nohead.cpp  parse.cpp  parse.h  plan.cpp  plan.h  simulation.cpp  simulation.h  source.cpp  source.h  stl.cpp  stl.h  system_tests.cpp  test.cpp  test.h  test_utils.cpp  test_utils.h  treatment_heads.h  truebeam.cpp
(+1247 files in other folders)
